# phoenix-factory

./: .gitignore  project_tree.txt  pyproject.toml
assets/character/hero/: hero.paal.yaml
docs/developer-guide/: PDG-001.md  PDG-002.md
schemas/paal/: paal.schema.yaml
src/phoenix_factory/: __init__.py  bootstrap.py  main.py
src/phoenix_factory/asset_library/: __init__.py  library.py
src/phoenix_factory/cli/: __init__.py
src/phoenix_factory/config/: config.py  environment.py
src/phoenix_factory/core/: __init__.py  application.py  banner.py  bootstrap.py  module.py  module_manager.py  version.py
src/phoenix_factory/engine/: __init__.py  base.py  manager.py
src/phoenix_factory/logging/: file_logger.py  formatter.py  level.py  logger.py
src/phoenix_factory/manifest/: __init__.py  manifest.py  manifest_service.py
src/phoenix_factory/models/: asset.py
src/phoenix_factory/paal/: __init__.py  builder.py  exporter.py  loader.py  model.py
src/phoenix_factory/pipelines/: __init__.py  asset_pipeline.py  pipeline.py
src/phoenix_factory/runtime/: __init__.py  runtime.py  state.py
src/phoenix_factory/services/: __init__.py  asset_service.py  environment_service.py
